--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
