--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
+    "country-state-city": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "passport": "^0.4.1",
@@ -17,11 +18,15 @@
     "passport-local": "^1.0.0",
     "qs": "^6.10.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-credit-cards": "^0.8.3",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
+    "react-use-cart": "^1.11.1",
     "validator": "^13.5.2",
     "web-vitals": "^1.1.1"
   },
