--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "country-state-city": "^2.0.0",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "popper.js": "^1.16.1",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
