--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "date-and-time": "^1.0.1",
     "engine.io-client": "^5.1.1",
     "engine.io-parser": "^4.0.2",
+    "import": "^0.0.6",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.12",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -31,14 +33,29 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.7.1",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-use-cart": "^1.11.1",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
+    "sweetalert2": "^11.0.16",
     "validator": "^13.6.0",
-    "web-vitals": "^2.0.0"
+    "web-vitals": "^2.0.0",
+    "workbox-background-sync": "^5.1.3",
+    "workbox-broadcast-update": "^5.1.3",
+    "workbox-cacheable-response": "^5.1.3",
+    "workbox-core": "^5.1.3",
+    "workbox-expiration": "^5.1.3",
+    "workbox-google-analytics": "^5.1.3",
+    "workbox-navigation-preload": "^5.1.3",
+    "workbox-precaching": "^5.1.3",
+    "workbox-range-requests": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3",
+    "workbox-streams": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
