--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-use-cart": "^1.11.1",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
+    "styled-components": "^5.3.0",
     "sweetalert2": "^11.0.16",
     "validator": "^13.6.0",
     "web-vitals": "^2.0.0",
